log
Thu 11 May 2023 09:39:35 PM UTC: 
 tests:  0|4
total_score: 0/70
1ddba3e
Thu 11 May 2023 11:42:59 PM UTC: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
3e37a39
Fri 12 May 2023 02:51:36 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:28: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   21 |     return pq->heapArray[0]->data;
      |                            ^~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
   22 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d4f0078
Fri 12 May 2023 02:53:21 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
e1bfe84
Fri 12 May 2023 02:55:29 AM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:22: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   21 |   if(pq->heapArray[0]->data==NULL) return NULL;
      |                      ^~
Compilation failed
b850729
Fri 12 May 2023 02:58:20 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:23: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   21 |   if(!pq->heapArray[0]->data) return NULL;
      |                       ^~
Compilation failed
32cbadc
